chore: apply Spotless formatting and enforce it in CI
Run mvn spotless:apply across the repo (Eclipse Google style + removeUnusedImports)
and add 'mvn spotless:check' to CI so formatting no longer drifts.